tests/parser/invalid/syntax_errors/test_missing_paren.src
// Ошибка: пропущена скобка
if (x > 0 {
    return x;
}